<resources>
    <string name="app_name">AppHoquei</string>
    <string name="hello_blank_fragment">Hello blanhgk fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forgor_your_password">Forgor your password?</string>
    <string name="login2">Login</string>
    <string name="ainda_n_o_tem_conta">Ainda não tem conta?</string>
    <string name="registo">Registo</string>
    <string name="j_tem_conta">Já tem conta?</string>
    <string name="registo2">Registo</string>
    <string name="repetir_password">Repetir password</string>
    <string name="perfil">Perfil</string>
    <string name="username2">Username:</string>
    <string name="email">Email:</string>
    <string name="guardar">Guardar</string>
    <string name="mudar_password">Mudar Password</string>
    <string name="email2">Email</string>
    <string name="mudar_email">Mudar Email</string>
    <string name="textview">TextView</string>
    <string name="logout">Logout</string>
    <string name="resultados">Resultados</string>
    <string name="emailRegisto">Email</string>
    <string name="nome">Nome</string>
    <string name="teste">teste</string>
    <string name="title_activity_verificar_login">VerificarLoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="email_atual">Email atual:</string>
    <string name="mudar_email2">Mudar email</string>
    <string name="novo_email">Novo email:</string>
    <string name="guardar2">Guardar</string>
    <string name="inserir_novo_email">Inserir novo email</string>
    <string name="password_atual">Password atual:</string>
    <string name="mudar_password2">Mudar password</string>
    <string name="nova_password">Nova password:</string>
    <string name="repetir_nova_password">Repetir<br /> nova password:</string>
    <string name="inserir_password_atual">Inserir password atual</string>
    <string name="inserir_nova_password">Inserir nova password</string>
    <string name="guardar3">Guardar</string>
    <string name="repetir_nova_password2">Repetir nova password</string>
    <string name="nome3">Nome</string>
    <string name="nome2">Nome:</string>
    <string name="enviar">Enviar</string>
    <string name="inserir_mensagem">Inserir mensagem</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="insira_mensagem">Insira mensagem</string>
    <string name="enviar2">Enviar</string>
    <string name="esta_a_minha_mensagem">Esta é a minha mensagem</string>
    <string name="imagem_user_chat_from">imagem_user_chat_from</string>
    <string name="esta_a_minha_mensagem2">Esta é a minha mensagem</string>
</resources>