<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MudarPasswordFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="-110dp"
        android:layout_marginBottom="100dp"
        android:text="@string/password_atual"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="-110dp"
        android:layout_marginBottom="25dp"
        android:text="@string/nova_password"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/mudar_password"
        android:textSize="38sp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="-110dp"
        android:layout_marginTop="50dp"
        android:text="@string/repetir_nova_password"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/textPassAtual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:hint="@string/inserir_password_atual"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/textNovaPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/inserir_nova_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/textRepetirNovaPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="75dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/repetir_nova_password2"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/BotaoGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:backgroundTint="#9FED91"
        android:text="@string/guardar" />

</FrameLayout>