<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/perfil"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="-50dp"
        android:layout_marginStart="20dp"
        android:textSize="17sp" />


    <Button
        android:id="@+id/botaoMudarPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="-210dp"
        android:width="200dp"
        android:backgroundTint="#ffffff"
        android:text="@string/mudar_password" />

    <Button
        android:id="@+id/botaoMudarEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="-150dp"
        android:width="200dp"
        android:backgroundTint="#ffffff"
        android:text="@string/mudar_email" />

    <Button
        android:id="@+id/botaoLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="-270dp"
        android:width="200dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="50dp"
        android:text="@string/nome2"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="-50dp"
        android:text="@string/email"
        android:textSize="17sp"
        android:textStyle="bold" />

</FrameLayout>